--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,8 @@
 }
 
 .button{
-  background-color: #242424;
+  color: #242424;
+  background-color:white;
   font-size: 25px;
   text-size-adjust: auto;
   padding: 15px 50px;
